# nuthatch

./: .gitignore  CLAUDE.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  footprint.sh  release.yml
components/: recurrence.wasm  screen.wasm
components/large-transfers/: Cargo.toml
components/large-transfers/src/: lib.rs
components/recurrence/: Cargo.toml
components/recurrence/src/: lib.rs
components/screen/: Cargo.toml
components/screen/src/: lib.rs
docs/: backlog.md  benchmarks.md  exex-design.md  factories.md  high-level-roadmap-jul-aug-2026.md  nest-catalogue.md  operators.md  prod-readiness.md  progress-log.md
docs/grants/: ef-esp.md  nlnet.md
docs/launch/: home-turf.md  show-hn.md
docs/rfcs/: 0001-generalized-decode-and-nests.md  0002-horizon-nest.md  0003-reth-exex-tip-mode.md  0004-backfill-throughput.md  0005-release-engineering-v0.1.0.md  0006-grant-funding.md  0007-launch-and-validation.md  0008-compliance-pack.md  0009-factory-and-dynamic-contract-discovery.md  0010-admin-ui-and-webhooks.md  0011-graph-network-nest-lodestar-migration.md  0012-multi-nest-runtime-and-nest-packaging.md  0013-storage-and-query-engine-direction.md  0014-firehose-class-extraction-traces-and-state.md  0015-the-delightful-core.md  0016-governed-semantic-layer-and-agent-grade-mcp.md  0017-builder-skill.md  0018-what-a-nest-is-authored-logic-and-composable-nests.md  0019-nest-registry-and-distribution.md  0020-nest-lifecycle-and-the-n-1-upgrade.md  0021-the-multichain-roost.md  0022-distributed-scaled-mode.md  0023-contract-state-eth-call-derive-first.md  0024-eth-call-execution-engine.md  0025-adaptive-mcp-tool-advertisement.md  README.md
docs/validation/: README.md
eval/: README.md  eval-report.schema.json  questions.toml
examples/roost/: README.md  roost.toml
examples/roost/nests/arb/: nuthatch.toml
examples/roost/nests/arb/abis/: erc20.json
examples/roost/nests/usdc/: nuthatch.toml
scripts/: try-nuthatch.sh
skills/nuthatch-builder/: SKILL.md  cli-reference.md  compliance.md  config-as-code.md  config-reference.md  troubleshooting.md  views.md  workflows.md
src/: abi.rs  admin.html  alerts.rs  analytics.rs  audit.rs  bench.rs  blob.rs  chains.rs  check.rs  chunker.rs  cli.rs  config.rs  decode.rs  distribution.rs  effectful.rs  exposure.rs  factory.rs  flags.rs  indexer.rs  labels.rs  lib.rs  lifecycle.rs  lists.rs  main.rs  mcp.rs  metadata.rs  metrics.rs  pack.rs  progress.rs  project.rs  recipes.rs  registry.rs  roost.rs  rpc.rs  screen.rs  seal.rs  semantic.rs  serve.rs  skill.rs  source.rs  (+7 more)
tests/: e2e_crash_safety.rs  e2e_reorg.rs  e2e_roost_parity.rs  e2e_solo.rs  eval_harness.rs  semantic_layer.rs  skill_refs.rs
tests/common/: tape.rs
wit/: effectful.wit  screen.wit  transform.wit
