[package]
name = "nuthatch"
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
description = "Be your own indexer. One Rust binary, one command, live in under two minutes."
license = "AGPL-3.0-only"
repository = "https://github.com/nuthatch-indexer/nuthatch"
homepage = "https://www.nuthatch-indexer.com"
readme = "README.md"
keywords = ["blockchain", "indexer", "ethereum", "self-hosted", "mcp"]
categories = ["command-line-utilities", "database", "cryptography::cryptocurrencies"]
# Keep the published crate lean: the 1.2 MB example WASM component and its guest source aren't
# needed to build the host (only a skipped test loads it), and the scratch/docs aren't either.
exclude = ["/components", "/scratchpad"]

[[bin]]
name = "nuthatch"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
alloy-json-abi = "1.6"
alloy-dyn-abi = "1.6"
alloy-primitives = "1.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
redb = "2"
arrow = { version = "56", features = ["ipc"] }
parquet = { version = "56", default-features = false, features = ["arrow", "snap"] }
duckdb = { version = "1", features = ["bundled"] }
dbsp = "0.320"
wasmtime = { version = "44", features = ["component-model"] }
wasmtime-wasi = "44"
sha2 = "0.10"
ed25519-dalek = "2"
getrandom = "0.2"
axum = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"

[features]
# ExEx tip-ingestion source (colocated reth). Stubbed today — see docs/exex-design.md — so the
# default build never pulls the (enormous) reth dependency.
exex = []

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
