[package]
name = "nuthatch"
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
description = "Be your own indexer. One Rust binary, one command, live in under two minutes."
license = "AGPL-3.0-only"
repository = "https://github.com/nuthatch-indexer/nuthatch"
homepage = "https://www.nuthatch-indexer.com"
readme = "README.md"
keywords = ["blockchain", "indexer", "ethereum", "self-hosted", "mcp"]
categories = ["command-line-utilities", "database", "cryptography::cryptocurrencies"]
# Keep the published crate lean: the 1.2 MB example WASM component and its guest source aren't
# needed to build the host (only a skipped test loads it), and the scratch/docs aren't either.
exclude = ["/components", "/scratchpad"]

[[bin]]
name = "nuthatch"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
alloy-json-abi = "1.6"
alloy-dyn-abi = "1.6"
alloy-primitives = "1.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
redb = "2"
arrow = { version = "56", features = ["ipc"] }
parquet = { version = "56", default-features = false, features = ["arrow", "snap"] }
duckdb = { version = "1", features = ["bundled"] }
dbsp = "0.320"
wasmtime = { version = "46", features = ["component-model"] }
wasmtime-wasi = "46"
sha2 = "0.10"
arc-swap = "1"
ed25519-dalek = "2"
getrandom = "0.2"
axum = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
tar = "0.4"
tempfile = "3"
rustyline = "18.0.1"
starlark = "0.14"
# RFC-0019 slice 2: the object-store (S3) registry backend. Optional + feature-gated so the default
# embedded binary never pulls the S3/HTTP dep tree - the FsStore covers the self-hosted case, S3 is the
# fleet path. Apache-2.0 (arrow-rs family). `aws` covers S3/MinIO/R2 via env config (AWS_ENDPOINT etc).
object_store = { version = "0.11", optional = true, features = ["aws"] }
url = { version = "2", optional = true }

[features]
# ExEx tip-ingestion source (colocated reth). Stubbed today - see docs/exex-design.md - so the
# default build never pulls the (enormous) reth dependency.
exex = []
# Object-store (S3-compatible) nest-registry backend (RFC-0019 slice 2). Off by default - the FsStore
# registry needs no extra deps; enable this for the fleet path (`--registry s3://…`).
object-store = ["dep:object_store", "dep:url"]

[dev-dependencies]
proptest = "1"

[profile.release]
lto = "thin"
strip = true
