# Standalone guest component - NOT a workspace member (wasm32-wasip2 cdylib only). Build + stage:
#   cargo build --manifest-path components/recurrence/Cargo.toml --target wasm32-wasip2 --release
#   cp target/wasm32-wasip2/release/recurrence.wasm components/recurrence.wasm
# An EFFECTFUL stage: it imports the host `kv` capability. Inspect its imports with:
#   wasm-tools component wit components/recurrence.wasm   # shows `import nuthatch:transform/kv`
[package]
name = "recurrence"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.57", default-features = false, features = ["macros"] }
arrow-array = { version = "56", default-features = false }
arrow-schema = { version = "56", default-features = false }
arrow-ipc = { version = "56", default-features = false }

[profile.release]
opt-level = "s"
lto = true
strip = true
